<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".app.activities.EventSearchActivity">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/event_search_title"
			android:textAppearance="?android:attr/textAppearanceLarge"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/event_search_from"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<CalendarView
			android:id="@+id/event_search_from"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/event_search_to"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<CalendarView
			android:id="@+id/event_search_to"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/event_search_by_title"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<AutoCompleteTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/event_search_by_title"/>

		<TextView
			android:id="@+id/event_search_info"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/empty"
			android:textAppearance="?android:attr/textAppearanceSmall"/>

		<Button
			android:id="@+id/event_search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/search_for_events"/>

		<Button
			android:id="@+id/event_search_back"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/back"/>
	</LinearLayout>
</ScrollView>
