<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".app.activities.EventCreationActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<EditText
			android:id="@+id/event_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<EditText
			android:id="@+id/event_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<CheckBox
			android:id="@+id/event_open"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/open_event"/>

		<CalendarView
			android:id="@+id/event_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/event_start_time"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="time"
			android:ems="10"
			android:text="@string/event_start_time_default"
			android:id="@+id/event_start_time"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/event_end_time"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="time"
			android:ems="10"
			android:text="@string/event_end_time_default"
			android:id="@+id/event_end_time"/>

		<LinearLayout
			android:id="@+id/invited_users_container"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/invited_users"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:id="@+id/invited_users_list"/>
		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/invite_users"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<AutoCompleteTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/event_search_users"
				android:layout_toLeftOf="@+id/event_search_users_button"
				android:layout_toStartOf="@+id/event_search_users_button"/>

			<SearchView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/event_search_users_button"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"/>

		</RelativeLayout>

		<Button
			android:id="@+id/event_to_map"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/open_map"/>

		<Button
			android:id="@+id/event_back"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/back"/>

	</LinearLayout>

</ScrollView>