<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.invitations.InvitationActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/invitation_item_event_description_label"
		android:text="@string/event_description"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:text="@string/empty"
		android:id="@+id/invitation_item_event_description"
		android:layout_below="@+id/invitation_item_event_description_label"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/invitation_item_event_start_time_container"
		android:layout_below="@+id/invitation_item_event_description"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="20dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_weight="0.35"
			android:id="@+id/invitation_item_event_start_time_label"
			android:text="@string/event_start_time"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_weight="0.65"
			android:id="@+id/invitation_item_event_start_time"
			android:text="@string/empty"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/invitation_item_event_end_time_container"
		android:layout_below="@+id/invitation_item_event_start_time_container"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_weight="0.35"
			android:id="@+id/invitation_item_event_end_time_label"
			android:text="@string/event_end_time"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_weight="0.65"
			android:id="@+id/invitation_item_event_end_time"
			android:text="@string/empty"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/invitation_item_event_end_time_container"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="20dp">

		<Button
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:text="@string/invitation_accept"
			android:id="@+id/invitation_item_accept" />

		<Button
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:text="@string/invitation_reject"
			android:id="@+id/invitation_item_reject" />

	</LinearLayout>

</RelativeLayout>
