<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".app.activities.EventSearchResultActivity">

		<TextView
			android:id="@+id/event_search_result_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:text="@string/event_search_result_title"
			android:textAppearance="?android:attr/textAppearanceLarge"/>

		<TextView
			android:id="@+id/event_search_result_info"
			android:layout_below="@+id/event_search_result_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:text="@string/empty"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<ExpandableListView
			android:id="@+id/event_search_result_list_view"
			android:layout_below="@+id/event_search_result_info"
			android:layout_above="@+id/event_search_result_new_query"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"/>

		<Button
			android:id="@+id/event_search_result_new_query"
			android:layout_above="@+id/event_search_result_back"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:text="@string/event_search_result_new_query"/>

		<Button
			android:id="@+id/event_search_result_back"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentBottom="true"
			android:text="@string/back"/>
</RelativeLayout>
