<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"

	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".app.activities.EventSelectActiveActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/event_select_active_title"
		android:text="@string/select_active_event"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignRight="@+id/event_select_active_list_view"
		android:layout_alignEnd="@+id/event_select_active_list_view"/>

	<TextView
		android:id="@+id/event_select_active_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/event_select_active_title"
		android:text="@string/empty"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<ExpandableListView
		android:id="@+id/event_select_active_list_view"
		android:layout_below="@+id/event_select_active_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/event_select_active_back"/>

	<Button
		android:id="@+id/event_select_active_back"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/back"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

</RelativeLayout>
