<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".app.activities.MyEventsActivity">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/my_events_title"
			android:text="@string/my_events_title"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"/>

		<TextView
			android:id="@+id/my_events_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/my_events_title"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:text="@string/empty"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	<ExpandableListView
		android:id="@+id/my_events_list_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/my_events_info"
		android:layout_above="@+id/my_events_back"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

	<Button
			android:id="@+id/my_events_back"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentBottom="true"
			android:text="@string/back"/>
</RelativeLayout>
